[Nexters/covid-letter-web#78] 💄 메일 형식 html

--- a/public/assets/html/mailform.html
+++ b/public/assets/html/mailform.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <!-- 메일 제목 -->
+        <title>안녕 나야 👋, 2021년 00월 00에 내가 보낸 편지 한번 읽어 볼래?</title>
         <style>
             html, body {
                 padding: 0;
@@ -16,31 +18,86 @@
             .itsme-container {
                 background-color: #FBF8ED;
             }
+
+            a {
+                font-weight: bold; 
+                font-size: 16px; 
+                line-height: 22px;
+                padding: 16px 0; 
+                border-radius: 4px;
+                width: 100%;
+                display: block;
+                text-decoration: none;
+            }
+            a:hover {
+                cursor: pointer;
+            }
         </style>
     </head>
     <body>
         <div class="itsme-wrapper">
             <div class="itsme-container">
-                <table role="presentation" cellpadding="0" cellspacing="0" style="text-align: center; padding: 30px; margin-left: auto;margin-right: auto;width: 100%; max-width: 420px;">
+                <table role="presentation" cellpadding="0" cellspacing="0" style="text-align: center; padding: 60px 0; margin-left: auto;margin-right: auto;width: 100%; max-width: 420px;">
                     <tbody>
                         <tr>
                             <td>
-                                <img src="../images/stickers/expect.png" />
-                                <div style="font-weight: 200;font-size: 20px;line-height: 32px;color: #22211F; padding: 16px 0; border-bottom: 2px dashed #ded9c6;">
+                                <!-- 이미지 -->
+                                <img src="../images/stickers/expect.png" style="margin-bottom: 16px;" />
+                                <div style="font-weight: 200;font-size: 20px;line-height: 32px;color: #22211F; padding: 0 0 32px;">
                                     안녕,나야.
                                     <br />
                                     오랜만이지?
                                 </div>
-                                <hr style="border-top: 2px dashed #ded9c6;" />
                             </td>
                         </tr>
                         <tr>
-                            <td style="padding: 8px; text-align: left;">
-                                <dl style="display: inherit;">
+                            <td style="padding: 8px; font-size: 12px; color: #5B5A57; line-height: 19px; text-align: left; border-top: 2px dashed #ded9c6; border-bottom: 2px dashed #ded9c6;">
+                                <dl style="display: inherit; padding-right: 24px; border-right: 1px solid #BBBBBB;">
                                     <dt style="display: inherit;">TO</dt>
-                                    <dd style="display: inherit; padding: 0 8px;">:</dd>
+                                    <dd style="display: inherit; padding: 0 4px;">:</dd>
+                                    <!-- 수신인 -->
+                                    <dd style="display: inherit; ">ME</dd>
+                                </dl>
+                                <dl style="display: inherit; padding-left: 24px;">
+                                    <dt style="display: inherit;">FROM</dt>
+                                    <dd style="display: inherit; padding: 0 4px;">:</dd>
+                                    <!-- 발신인 -->
                                     <dd style="display: inherit;">ME</dd>
                                 </dl>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td style="padding: 16px 0 24px; text-align: center;">
+                                <div style="background-color: #F6F4E8; padding: 24px 0; font-size: 12px; line-height: 19px; color: #5B5A57;">
+                                    <!-- 날짜 -->
+                                    이 편지는 2021년 7월 10일에
+                                    <br />
+                                    내가 적은 편지야.
+                                    <br />
+                                    <br />
+                                    나를 잊어버렸을 수도 있고, 나를 기다려왔을 수도 있겠네.
+                                    <br />
+                                    <br />
+                                    <!-- 기간 -->
+                                    지금으로부터 약 6개월 전의 나는
+                                    <br />
+                                    어떤 생각을 가지고 있었을까?
+                                    <br />
+                                    <br />
+                                    한번 읽어보지 않을래?
+                                </div>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td style="padding: 0 0 16px;">
+                                <!-- 링크 -->
+                                <a href="#" target="__blank" style="background: #11373E; color: #fff; border: 0;">편지보러가기</a>
+                                <a href="http://halo-its.me" target="__blank" style="margin-top: 16px; border: 2px solid #11373E; background-color: transparent; color: #11373E; box-sizing: border-box;">안녕,나야 둘러보기</a>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td style="text-align: center; font-weight: 300; font-size: 12px; line-height: 19px; color: #333333;">
+                                2021 안녕. 나야., All Rights Reserved.
                             </td>
                         </tr>
                     </tbody>
