[Nexters/covid-letter-web#88] 🔧 ssl 적용

--- a/public/assets/html/mailform.html
+++ b/public/assets/html/mailform.html
@@ -92,7 +92,7 @@
                             <td style="padding: 0 0 16px;">
                                 <!-- 링크 -->
                                 <a href="#" target="__blank" style="background: #11373E; color: #fff; border: 0;">편지보러가기</a>
-                                <a href="http://halo-its.me" target="__blank" style="margin-top: 16px; border: 2px solid #11373E; background-color: transparent; color: #11373E; box-sizing: border-box;">안녕,나야 둘러보기</a>
+                                <a href="https://halo-its.me" target="__blank" style="margin-top: 16px; border: 2px solid #11373E; background-color: transparent; color: #11373E; box-sizing: border-box;">안녕,나야 둘러보기</a>
                             </td>
                         </tr>
                         <tr>
