♻️ mailform 인라인 스타일로 이동

--- a/public/assets/html/mailform.html
+++ b/public/assets/html/mailform.html
@@ -8,35 +8,14 @@
                 padding: 0;
                 margin: 0;
             }
-            .itsme-wrapper {
-                margin: 0 auto;
-                font-family: 'Apple SD Gothic Neo',arial,sans-serif;
-                font-style: normal;
-                padding: 0;
-                letter-spacing: -0.015em;
-            }
-            .itsme-container {
-                background-color: #FBF8ED;
-            }
-
-            a {
-                font-weight: bold; 
-                font-size: 16px; 
-                line-height: 22px;
-                padding: 16px 0; 
-                border-radius: 4px;
-                width: 100%;
-                display: block;
-                text-decoration: none;
-            }
             a:hover {
                 cursor: pointer;
             }
         </style>
     </head>
     <body>
-        <div class="itsme-wrapper">
-            <div class="itsme-container">
+        <div style="margin: 0 auto; font-family: 'Apple SD Gothic Neo',arial,sans-serif; font-style: normal; padding: 0; letter-spacing: -0.015em;">
+            <div style="background-color: #FBF8ED;">
                 <table role="presentation" cellpadding="0" cellspacing="0" style="text-align: center; padding: 60px 0; margin-left: auto;margin-right: auto;width: 100%; max-width: 420px;">
                     <tbody>
                         <tr>
@@ -91,8 +70,8 @@
                         <tr>
                             <td style="padding: 0 0 16px;">
                                 <!-- 링크 -->
-                                <a href="#" target="__blank" style="background: #11373E; color: #fff; border: 0;">편지보러가기</a>
-                                <a href="https://halo-its.me" target="__blank" style="margin-top: 16px; border: 2px solid #11373E; background-color: transparent; color: #11373E; box-sizing: border-box;">안녕,나야 둘러보기</a>
+                                <a href="#" target="__blank" style="font-weight: bold; font-size: 16px; line-height: 22px;padding: 16px 0; border-radius: 4px;width: 100%; display: block; text-decoration: none; background: #11373E; color: #fff; border: 0;">편지보러가기</a>
+                                <a href="https://halo-its.me" target="__blank" style="font-weight: bold; font-size: 16px; line-height: 22px;padding: 16px 0; border-radius: 4px;width: 100%;display: block; text-decoration: none; margin-top: 16px; border: 2px solid #11373E; background-color: transparent; color: #11373E; box-sizing: border-box;">안녕,나야 둘러보기</a>
                             </td>
                         </tr>
                         <tr>
